name:               TweetCone
version:            0.1.0.0
synopsis:           Visualisation of Twitter trending topics using ConeCanvas
description:        TweetCone displays a 3D timeline of trending Twitter topics using the ConeCanvas WebGL widget
homepage:           http://symbolian.net
license:            AllRightsReserved
license-file:       LICENSE
author:             Vincent Ahrend
maintainer:         vincent.ahrend@synbolian.net
copyright:          Symbolian GmbH
category:           Web
build-type:         Simple
cabal-version:      >=1.10


executable TweetCone
    main-is:             Main.hs
    -- other-modules:
    other-extensions:    DeriveGeneric, OverloadedStrings, RecordWildCards
    build-depends:
        base >=4.8 && <4.9,
        ConeServer >=0.3 && <0.4,
        hoauth2 >=0.5 && <0.6,
        warp >=3.2 && <3.3,
        aeson >=0.11 && <0.12,
        bytestring >=0.10 && <0.11,
        text >=1.2 && <1.3,
        aeson-pretty >=0.7 && <0.8,
        time >=1.5 && <1.6,
        strict >=0.3 && <0.4,
        deepseq >=1.4 && <1.5,
        twitter-types >=0.7 && <0.8,
        http-conduit >=2.1 && <2.2,
        unix >=2.7 && <2.8
    hs-source-dirs:      src
    default-language:    Haskell2010
